--- a/src/Styles.css
+++ b/src/Styles.css
@@ -45,7 +45,7 @@ nav>a:hover {
 
 
 .products-section,
-.bills-section {
+.bills-section, .order-section {
     display: flex;
     justify-content: center;
 }
@@ -56,10 +56,10 @@ nav>a:hover {
 }
 
 /*Formularios*/
-.form-section {
+.form-section, .dataTables-section {
     width: 40%;
     background-color: var(--gris);
-    height: 100vh;
+    height: 95vh;
 }
 
 .header-form {
@@ -120,6 +120,10 @@ button:hover {
 }
 
 /*Tablas*/
+.tables-section {
+    width: 60%;
+}
+
 table {
     border: 1px solid var(--gris);
     width: 100%;
@@ -134,5 +138,28 @@ th,
 td {
     width: 25%;
     text-align: left;
-    padding: 0.3em;
+    padding: 0.5em;
+}
+
+/*Salón*/
+.tables-section {
+    display: grid;
+    grid-template-columns: repeat(3, 250px);
+    align-items: center;
+    justify-content: center;
+    justify-items: center;
+}
+
+.table {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    border: 1px solid var(--gris);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--verde);
+    color: #fff;
+    font-size: x-large;
+    cursor: pointer;
 }
