--- a/src/Styles.css
+++ b/src/Styles.css
@@ -163,3 +163,43 @@ td {
     font-size: x-large;
     cursor: pointer;
 }
+
+.table:hover {
+    box-shadow: 0px 0px 10px 3px rgb(253, 152, 0);
+    transition: .3s;
+}
+
+.form-search {
+    padding: 1em;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    background-color: #797979;
+}
+
+.form-search > input {
+    width: 300px;
+    outline: none;
+    border-radius: 5px;
+    border: 1px solid var(--gris-oscuro);
+    padding: 6px 8px;
+}
+
+.products-list {
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.products-list > p {
+    cursor: pointer;
+    padding: 5px;
+}
+.products-list > p:hover{
+    background-color: #e0e0e0;
+}
+
+.order-client {
+    padding: 1em;
+}
