--- a/src/Styles.css
+++ b/src/Styles.css
@@ -20,6 +20,7 @@ input {
     --gris: #e0e0e0;
     --gris-oscuro: #797979;
     --verde: #24b624;
+    --naranja: #fd9800;
 }
 
 nav {
@@ -63,7 +64,7 @@ nav>a:hover {
 }
 
 .header-form {
-    background-color: #24b624;
+    background-color: var(--verde);
     color: #fff;
     padding: 10px 15px;
 }
@@ -115,7 +116,7 @@ button:hover {
 }
 
 .btn-add {
-    background-color: #24b624;
+    background-color: var(--verde);
     color: #fff;
 }
 
@@ -165,7 +166,7 @@ td {
 }
 
 .table:hover {
-    box-shadow: 0px 0px 10px 3px rgb(253, 152, 0);
+    box-shadow: 0px 0px 10px 3px var(--naranja);
     transition: .3s;
 }
 
@@ -173,33 +174,52 @@ td {
     padding: 1em;
     display: flex;
     flex-direction: column;
-    gap: 5px;
-    background-color: #797979;
+    /* background-color: #797979; */
 }
 
 .form-search > input {
     width: 300px;
     outline: none;
-    border-radius: 5px;
-    border: 1px solid var(--gris-oscuro);
-    padding: 6px 8px;
+    border: none;
+    padding: 8px;
+    margin-top: 8px;
 }
+
 
 .products-list {
     background-color: #fff;
     display: flex;
     flex-direction: column;
     gap: 5px;
+    width: 300px;
 }
 
-.products-list > p {
+.content-list {
+    display: flex;
+    gap: 8px;
     cursor: pointer;
-    padding: 5px;
+    padding: 8px;
 }
-.products-list > p:hover{
-    background-color: #e0e0e0;
+
+.content-list:hover{
+    background-color: var(--gris);
 }
 
 .order-client {
-    padding: 1em;
+    margin: 1em;
+}
+
+.order-article {
+    display: grid;
+    grid-template-columns: repeat(4, 150px);
+    padding: 5px;
+}
+
+.btn-delete {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
