Incorporación de pop up para confirmar cierre de mesa, recuperación de datos 'cantidad de personas' y 'forma de pago', revisión de estilos de tablas

--- a/src/Styles.css
+++ b/src/Styles.css
@@ -102,7 +102,7 @@ nav>a:hover {
 }
 
 .form-search>input {
-    width: 300px;
+    width: 400px;
     outline: none;
     border: none;
     padding: 0.8em;
@@ -113,10 +113,9 @@ nav>a:hover {
     background-color: #fff;
     display: flex;
     flex-direction: column;
-    gap: 5px;
-    width: 300px;
+    width: 400px;
     position: absolute;
-    top: 80px;
+    top: 81px;
     border-top: 1px solid black;
 }
 
@@ -125,6 +124,10 @@ nav>a:hover {
     gap: 0.6em;
     cursor: pointer;
     padding: 0.6em;
+    border-bottom: 1px solid #000;
+    border-left: 1px solid #000;
+    border-right: 1px solid #000;
+    ;
 }
 
 .container-products-list:hover {
@@ -257,9 +260,12 @@ thead {
     background-color: var(--gris);
 }
 
-th,
+th {
+    text-align: center;
+    padding: 0.5em;
+}
+
 td {
-    width: 20%;
     text-align: left;
     padding: 0.5em;
 }
@@ -272,4 +278,24 @@ td {
 .selected-table>p {
     border: 1px solid black;
     padding: 0.6em;
+}
+
+.no-visible {
+    display: none;
+}
+
+.visible {
+    display: block;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: var(--gris);
+}
+
+.form-finish-header {
+    background-color: var(--gris-oscuro);
+    color: #fff;
+    padding: 15px 0;
+    text-align: center;
 }
