--- a/src/Styles.css
+++ b/src/Styles.css
@@ -213,7 +213,7 @@ input[type=number] {
 }
 
 button {
-    width: 125px;
+    width: 135px;
     padding: 10px 0;
     cursor: pointer;
     border-radius: 5px;
@@ -225,6 +225,7 @@ button {
 .buttons-container {
     margin-top: 0.6em;
     display: flex;
+    justify-content: end;
     gap: 0.6em;
 }
 
@@ -304,4 +305,10 @@ td {
     display: flex;
     gap: 5em;
     margin: 20px 0 30px 0;
+}
+
+.bills-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
