--- a/src/index.css
+++ b/src/index.css
@@ -196,35 +196,42 @@ nav>a:hover {
     width: 30%;
 }
 
-.form-content>input{
+.form-content>input {
     width: 70%;
     outline: none;
     border-radius: 5px;
     border: 1px solid var(--gris-oscuro);
     padding: 0.6em;
 }
-.form-content>select{
+
+.form-content>select {
     text-align: start;
 }
+
 .confirmation-form {
+    width: 400px;
     display: flex;
     align-items: center;
     margin-top: 0.6em;
     justify-content: center;
     gap: 10px;
 }
-.confirmation-form >label{
-width: 30%;
+
+.confirmation-form>label {
+    width: 30%;
 }
 
-.confirmation-form >input, select {
- width: 25%;
- height: 30px;
- border-radius: 5px;
- outline: none;
- border: 1px solid var(--gris-oscuro);
+.confirmation-form>input,
+select {
+    width: 30%;
+    height: 30px;
+    border-radius: 5px;
+    outline: none;
+    border: 1px solid var(--gris-oscuro);
+    padding-left: 5px;
 
 }
+
 button {
     padding: 10px 15px;
     cursor: pointer;
@@ -281,12 +288,15 @@ td {
     text-align: left;
     padding: 0.5em;
 }
-tbody > tr {
+
+tbody>tr {
     cursor: pointer;
 }
-tbody > tr:hover {
+
+tbody>tr:hover {
     background-color: var(--gris);
 }
+
 .select-table {
     display: grid;
     place-content: center;
@@ -308,7 +318,9 @@ tbody > tr:hover {
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: var(--gris);
+    border: 1px solid var(--gris-oscuro);
 }
+
 
 .form-finish-header {
     background-color: var(--gris-oscuro);
